// Copyright 2018 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package crimson;

// A physical host in the database.
message PhysicalHost {
  // The name of this host on the network. With VLAN ID, uniquely identifies this host.
  string name = 1;
  // The VLAN this host belongs to. With hostname, uniquely identifies this host.
  // When creating a host, omit this field. It will be inferred from the IPv4 address.
  int64 vlan = 2;
  // The machine backing this host.
  string machine = 3;
  // The operating system backing this host.
  string os = 4;
  // The number of VMs which can be deployed on this host.
  int32 vm_slots = 5;
  // A description of this host.
  string description = 6;
  // The deployment ticket associated with this host.
  string deployment_ticket = 7;
  // The IPv4 address associated with this host.
  string ipv4 = 8;
}

// CreatePhysicalHostRequest is a request to create a new physical host in the database.
message CreatePhysicalHostRequest {
  // The host to create in the database.
  PhysicalHost host = 1;
}

// ListPhysicalHostsRequest is a request to list physical hosts in the database.
message ListPhysicalHostsRequest {
  // The names of hosts to get.
  repeated string names = 1;
  // The VLANs to filter retrieved hosts on.
  repeated int64 vlans = 2;
  // TODO(smut): Add the rest of the filters.
}

// ListPhysicalHostsResponse is a response to a request to list physical hosts.
message ListPhysicalHostsResponse {
  // The hosts matching this request.
  repeated PhysicalHost hosts = 1;
  // TODO(smut): Support page tokens.
}
